Fix video iframe position (was not centered)
This refs affinitic #6597

--- a/gites/theme/static/css/style.css
+++ b/gites/theme/static/css/style.css
@@ -363,6 +363,7 @@ bottom:0px;
 
 /* !!! Define the height of the items to avoid a weird behavior when the previous item has a smaller height */
 #hebergement-carousel .carousel-inner div.item {
+text-align:center;
 height: 401px;
 }
 
